--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-track-bot.token=1067401112:AAEbODo-jHPiHqY-xJZkq4n0mO0KVAVA7BI
-track-bot.name=JUG Track Bot
+track-bot.token= # Token
+track-bot.name= # Name
